feat: add rating and comment; related to #50
